# proc-macro-workshop

./: README.md  main.rs
builder/: Cargo.toml
builder/src/: lib.rs
seq/: Cargo.toml
seq/src/: lib.rs
seq/tests/: 04-paste-ident.rs
